--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="../css/index.css">
-    <script src="../javascript/index.js"></script>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <div class="login-container">
