--- a/home.html
+++ b/home.html
@@ -36,10 +36,10 @@
 
     <div class="container">
         <h1>Welcome to Verandah Café: Where Every Sip is a Story</h1>
-        <p>At Verandah Café, we don't just serve coffee; we craft experiences. Nestled in the heart of [Location], our café is more than just a place to grab a drink – it's a sanctuary for community, creativity, and connection.</p>
+        <p>At Verandah Café, we don't just serve coffee; we craft experiences. Our café is more than just a place to grab a drink – it's a sanctuary for community, creativity, and connection.</p>
 
         <h2>Our Story:</h2>
-        <p>Verandah Café was born from a passion for bringing people together over exceptional coffee and delicious bites. Established in [Year], we've been serving up more than just caffeine – we're serving moments of joy, inspiration, and friendship.</p>
+        <p>Verandah Café was born from a passion for bringing people together over exceptional coffee and delicious bites.We've been serving up more than just caffeine – we're serving moments of joy, inspiration, and friendship.</p>
 
         <h2>Our Atmosphere:</h2>
         <p>Step into Verandah Café, and you're greeted by the comforting aroma of freshly brewed coffee and the warm chatter of friends catching up. Our cozy yet vibrant space invites you to linger, whether you're seeking a quiet corner to dive into a book or a lively table for spirited conversation.</p>
