--- a/about.html
+++ b/about.html
@@ -104,6 +104,9 @@
         <h2>Data Model</h2>
         <img src="images/ERD diagram.png" class="image" alt="ERD Diagram">
         <img src="images/visualization by ratings.png" class="image" alt="Visualization By Ratings">
+        <img src="images/git_1.jpeg" class="image" alt="commits">
+        <img src="images/git_2.jpeg" class="image" alt="commits">
+        <img src="images/git_3.jpeg" class="image" alt="commits">
     </div>
 </body>
 </html>
