--- a/about.html
+++ b/about.html
@@ -23,6 +23,8 @@
         </div>
     </div>
 
+   <h3> Github Link to the Project: </h3> <a href="https://github.com/neshmakasamneni/Assignment_LookAndFeel"> 
+       Assignment03-WebLookandFeel</a> 
     <div class="about-container">
         <div class="profile">
             <img class="profile-image" src="images/ranjith.png" alt="Profile image">
