--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verandah Café</title>
+    <title>Verandah Cafe</title>
     <link rel="stylesheet" href="css/home.css">
     <style>
         body {
@@ -20,7 +20,7 @@
     <div class="buttom-header-container">
         <div class="buttom-header">
             <div class="logo">
-                <h1>Verandah Café</h1>
+                <h1>Verandah Cafe</h1>
             </div>
             <div class="navlist">
                 <a href="home.html">HOME</a>
@@ -35,25 +35,25 @@
     </div>
 
     <div class="container">
-        <h1>Welcome to Verandah Café: Where Every Sip is a Story</h1>
-        <p>At Verandah Café, we don't just serve coffee; we craft experiences. Our café is more than just a place to grab a drink – it's a sanctuary for community, creativity, and connection.</p>
+        <h1>Welcome to Verandah Cafe: Where Every Sip is a Story</h1>
+        <p>At Verandah Cafe, we don't just serve coffee; we craft experiences. Our Cafe is more than just a place to grab a drink – it's a sanctuary for community, creativity, and connection.</p>
 
         <h2>Our Story:</h2>
-        <p>Verandah Café was born from a passion for bringing people together over exceptional coffee and delicious bites.We've been serving up more than just caffeine – we're serving moments of joy, inspiration, and friendship.</p>
+        <p>Verandah Cafe was born from a passion for bringing people together over exceptional coffee and delicious bites.We've been serving up more than just caffeine – we're serving moments of joy, inspiration, and friendship.</p>
 
         <h2>Our Atmosphere:</h2>
-        <p>Step into Verandah Café, and you're greeted by the comforting aroma of freshly brewed coffee and the warm chatter of friends catching up. Our cozy yet vibrant space invites you to linger, whether you're seeking a quiet corner to dive into a book or a lively table for spirited conversation.</p>
+        <p>Step into Verandah Cafe, and you're greeted by the comforting aroma of freshly brewed coffee and the warm chatter of friends catching up. Our cozy yet vibrant space invites you to linger, whether you're seeking a quiet corner to dive into a book or a lively table for spirited conversation.</p>
 
         <h2>Our Menu:</h2>
         <p>From our carefully curated selection of specialty coffees to our mouthwatering pastries and light bites, every item on our menu is crafted with care and quality in mind. Whether you're craving a classic cappuccino, a decadent slice of cake, or a wholesome salad, there's something to delight every palate.</p>
 
         <h2>Our Community:</h2>
-        <p>Verandah Café isn't just a place to grab a drink – it's a hub for our vibrant community. From hosting local art exhibitions to supporting grassroots initiatives, we're committed to nurturing creativity, fostering connections, and giving back to the neighborhoods we call home.</p>
+        <p>Verandah Cafe isn't just a place to grab a drink, it's a hub for our vibrant community. From hosting local art exhibitions to supporting grassroots initiatives, we're committed to nurturing creativity, fostering connections, and giving back to the neighborhoods we call home.</p>
 
         <h2>Our Promise:</h2>
-        <p>When you visit Verandah Café, you're not just a customer – you're part of our family. We strive to make every visit memorable, every cup exceptional, and every interaction meaningful. Because here at Verandah Café, every sip is a story waiting to be told.</p>
+        <p>When you visit Verandah Cafe, you're not just a customers you're part of our family. We strive to make every visit memorable, every cup exceptional, and every interaction meaningful. Because here at Verandah Cafe, every sip is a story waiting to be told.</p>
 
-        <p>Join us at Verandah Café, where coffee isn't just a beverage – it's an experience.</p>
+        <p>Join us at Verandah Cafe, where coffee isn't just a beverage – it's an experience.</p>
 
 
         <div class="testimonials">
