--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
     <div class="buttom-header-container">
         <div class="buttom-header">
             <div class="logo">
-                <h1>Verandah Café</h1>
+                <h1>Verandah Cafe</h1>
             </div>
             <div class="navlist">
                 <a href="home.html">HOME</a>
